<resources>
    <string name="app_name">Honk</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_news">News</string>
    <string name="drawer_feeds">Feeds</string>
    <string name="drawer_cameras">Cameras</string>
    <string name="drawer_maps">Maps</string>
    <string name="drawer_favourites">Favourites</string>
    <string name="drawer_login">Login</string>
    <string name="register_now">Don\'t have an account? Register now!</string>
    <string name="username_hint"> Email Address</string>
    <string name="password_hint"> Password</string>
    <string name="welcome_to_honk">Welcome to !Honk</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="connection_error">Connection Error</string>
    <string name="xml_error">XML Error</string>
    <string name="nav_quit">Quit</string>
    <string name="admin">Admin Page</string>
    <string name="log_out">Log out</string>
    <string name="quit">Quit</string>
</resources>
