<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:title="@string/drawer_news" />
        <item
            android:id="@+id/nav_feed"
            android:title="@string/drawer_feeds" />
        <item
            android:id="@+id/nav_cameras"
            android:title="@string/drawer_cameras" />
        <item
            android:id="@+id/nav_maps"
            android:title="@string/drawer_maps" />
        <item
            android:id="@+id/nav_favourites"
            android:title="@string/drawer_favourites" />
        <item
            android:id="@+id/nav_login"
            android:title="@string/drawer_login" />
        <item
            android:id="@+id/nav_quit"
            android:title="@string/nav_quit" />
    </group>
</menu>
