<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_honk"
        android:id="@+id/textView"
        android:textSize="25sp"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/username_editText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username_hint"
        android:background="@drawable/round_edit_text"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:background="@drawable/round_edit_text"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:layout_below="@+id/username_editText"
        android:layout_alignStart="@+id/username_editText"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/password_editText"
        android:layout_alignStart="@+id/password_editText"
        android:layout_marginTop="20dp"
        android:layout_alignEnd="@+id/password_editText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/register_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>